--- a/HTML Assignment/1/index.html
+++ b/HTML Assignment/1/index.html
@@ -1,1 +1,58 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Table</title>
+</head>
+<body>
+    <center><table border="1" height="10%" width="35%" align="center">
+        <tr>
+            <th rowspan="3">Day</th>
+            <th colspan="4">Seminar</th>
+        </tr>
+        <tr>
+            <td  colspan="2"><strong><center>Schedule</center></strong></td>
+            <td rowspan="2"><strong><center>Topic</center></strong></td>
+            
+        </tr>
+        <tr>
+            <td><strong><center>Begin</center></strong></td>
+            <td><strong><center>End</center></strong></td>
 
+        </tr>
+        <tr>
+            <td rowspan="2">Monday</td>
+            <td rowspan="2">08:00 a.m.</td>
+            <td rowspan="2">05:00 a.m.</td>
+            <td><center>Introduction to XML</center></td>
+        </tr>
+        <tr>
+            <td><center>Validity: DTD and Relax NG</center></td>
+        </tr>
+        <tr>
+            <td rowspan="3">Tuesday</td>
+            <td>08:00 a.m.</td>
+            <td>11:00 a.m.</td>
+            <td rowspan="2"><center>X Path</center></td>
+        </tr>
+        <tr>
+            <td>11:00 a.m.</td>
+            <td>02:00 p.m.</td>
+        </tr>
+        <tr>
+            <td>02:00 a.m.</td>
+            <td>05:00 p.m.</td>
+            <td><center>XSL Transaformation</center></td>
+        </tr>
+        <tr>
+            <td >Wednesdat</td>
+            <td >08:00 a.m.</td>
+            <td >12:00 p.m.</td>
+            <td><center>XSL Formatting Objects</center></td>
+        </tr>
+    </table>
+</center>
+</body>
+</html>
