--- a/CSS/2/index.html
+++ b/CSS/2/index.html
@@ -1,1 +1,51 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<link rel="stylesheet" href="style.css">
+<body>
+    <div class="container">
+        <div class="display">
+            <p class="text">2a. Uber</p> 
+            <div class="new">
+                <button class="button" id="uber">Request Now</button>
+            </div>
+        </div>
 
+        <div class="display">
+            <p class="text">2b. Amazon</p> 
+            <div class="new">
+            <button class="button" id="amazon">Add to Card</button>
+            </div>
+        </div>
+
+        <div class="display">
+            <p class="text">2c. GitHub</p>
+            <div class="new">
+            <button class="button" id="github">Sign up</button>
+            </div>
+        </div>
+        <br><br>
+        <div class="display">
+            <p class="text">2d. Bootstrap</p>
+            <div class="new">
+            <button class="button" id="bootstrap">Get Started</button>
+            <button class="button" id="bootstrap2">Download</button>
+        </div>    
+        </div>
+
+        <div class="display">
+            <p class="text">2e. LinkedIn</p>
+            <div class="new">
+            <button class="button" id="linked1">Apply on company website</button>
+            <button class="button" id="linkedin2">Save</button>
+        </div>
+        </div>
+
+    </div>
+</body>
+</html>
