--- a/CSS/4/index.html
+++ b/CSS/4/index.html
@@ -1,1 +1,43 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<link rel="stylesheet" href="style.css">
+<body>
+    <div class="header">Your Logo Here</div>
+    <div class="navbar">
+    <nav>
+    <ul>
+        <li>Home</li>
+        <li>About</li>
+        <li>Page 1</li>
+        <li>Page 2</li>
+        <li>Page 3</li>
+        <li>Page 4</li>
+        <li>Contact</li>
+    </ul>    
+    </nav>
+    </div>
+        <div class="secondDiv">
+            <h1 class="heading">H1 SIMPLE BROWN BACKGROUND</h1>
+            <div class="square-div">
+            <p>Square</p> 
+            </div>
+            <div class="square-div">
+            <p>Square</p> 
+            </div>
+            <div class="square-div">
+            <p>Square</p> 
+            </div>
+            <hr>
+            <div>
+                <h2> H2 - LOREM IPSUM</h2>
+                <p class="para">P - Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi sit ipsam, voluptatem eaque ipsa cumque quo hic saepe explicabo dolor minima dignissimos, officia nostrum, quis reiciendis optio praesentium necessitatibus assumenda! Ex magni quisquam ipsum nam amet libero numquam voluptatem quibusdam placeat, maiores sit qui, tenetur dolorum illum expedita laudantium minus autem neque, quo suscipit pariatur sunt doloribus illo necessitatibus. Magnam aperiam et harum mollitia id veritatis praesentium recusandae placeat autem! Aliquam eligendi autem sunt adipisci molestiae eveniet, aut ducimus natus debitis provident enim ex, quo consectetur molestias, nesciunt ut a. Assumenda itaque nam debitis nisi exercitationem odit, in velit hic..</p>
+            </div>
+        </div>
+</body>
+</html>
